# p3-miden

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: build.yml
p3-air-next/: Cargo.toml
p3-air-next/src/: air.rs  lib.rs
p3-air-next/src/symbolic/: builder.rs  expression.rs  mod.rs  variable.rs
p3-miden-air/src/: air.rs  bool_builder.rs  bool_expr.rs  bool_taggable.rs  builder.rs  filtered_builder.rs  lib.rs
p3-miden-dev-utils/: Cargo.toml
p3-miden-dev-utils/src/: bench.rs  configs.rs  fixtures.rs  lib.rs  matrix.rs
p3-miden-field/: Cargo.toml
p3-miden-field/src/: array.rs  coset.rs
p3-miden-field/src/extension/: packed_binomial_extension.rs
p3-miden-field/src/packed/: packed_traits.rs
p3-miden-fri/: Cargo.toml
p3-miden-fri/benches/: fold_even_odd.rs
p3-miden-fri/src/: batch_merkle.rs  batched_proof.rs  config.rs  hiding_pcs.rs  lib.rs  prover.rs  two_adic_pcs.rs  verifier.rs
p3-miden-fri/tests/: batched_proof.rs  fri.rs  pcs.rs
p3-miden-lifted/: Cargo.toml  README.md
p3-miden-lifted-air/: Cargo.toml
p3-miden-lifted-air/src/: air.rs  builder.rs  empty_window.rs  extension.rs  instance.rs  lib.rs  periodic.rs  util.rs
p3-miden-lifted-air/src/aux/: builder.rs  mod.rs  values.rs
p3-miden-lifted-air/src/auxiliary/: mod.rs
p3-miden-lifted-air/src/symbolic/: builder.rs  expression.rs  variable.rs
p3-miden-lifted-examples/: Cargo.toml
p3-miden-lifted-examples/src/: blake3.rs  compat.rs  keccak.rs  lib.rs  miden.rs  poseidon2.rs  stats.rs
p3-miden-lifted-fri/: Cargo.toml  README.md
p3-miden-lifted-fri/benches/: deep_quotient.rs  fri_comparison.rs  fri_fold.rs  pcs.rs  pcs_trace.rs  utils.rs
p3-miden-lifted-fri/src/: lde.rs  lib.rs  params.rs  proof.rs  prover.rs  tests.rs  utils.rs  verifier.rs
p3-miden-lifted-fri/src/deep/: evals.rs  interpolate.rs  mod.rs  proof.rs  prover.rs  tests.rs  utils.rs  verifier.rs
p3-miden-lifted-fri/src/fri/: mod.rs  proof.rs  prover.rs  tests.rs  verifier.rs
p3-miden-lifted-fri/src/fri/fold/: arity2.rs  arity4.rs  arity8.rs  mod.rs
p3-miden-lifted-prover/: Cargo.toml  README.md  notes.md
p3-miden-lifted-prover/benches/: quotient_commit.rs
p3-miden-lifted-prover/src/: commit.rs  constraints.rs  lib.rs  notes.rs  periodic.rs  prover.rs  quotient.rs
p3-miden-lifted-prover/src/constraints/: folder.rs  layout.rs  mod.rs
p3-miden-lifted-prover/tests/: aux_shape.rs  bus_test.rs  keccak_air.rs  multi_aux_alignment.rs  multi_trace.rs  tiny_air.rs
p3-miden-lifted-prover/tests/common/: mod.rs
p3-miden-lifted-stark/: Cargo.toml  README.md  notes.md
p3-miden-lifted-stark/benches/: quotient_commit.rs
p3-miden-lifted-stark/src/: commit.rs  config.rs  constraints.rs  coset.rs  debug.rs  folder.rs  instance.rs  layout.rs  lib.rs  notes.rs  periodic.rs  proof.rs  selectors.rs  transcript.rs  util.rs  utils.rs
p3-miden-lifted-stark/src/prover/: README.md  commit.rs  mod.rs  periodic.rs  quotient.rs
p3-miden-lifted-stark/src/prover/constraints/: folder.rs  layout.rs  mod.rs
p3-miden-lifted-stark/src/verifier/: README.md  constraints.rs  mod.rs  periodic.rs  proof.rs
p3-miden-lifted-stark/tests/: aux_shape.rs  bus_test.rs  multi_aux_alignment.rs  tiny_air.rs
p3-miden-lifted-stark/tests/common/: mod.rs
p3-miden-lifted-verifier/: Cargo.toml  README.md  notes.md
p3-miden-lifted-verifier/src/: constraints.rs  lib.rs  notes.rs  periodic.rs  proof.rs  verifier.rs
p3-miden-lifted-verifier/tests/: transcript.rs
p3-miden-lifted/benches/: deep_quotient.rs  fri_comparison.rs  fri_fold.rs  pcs.rs  utils.rs
p3-miden-lifted/src/: lib.rs  tests.rs  utils.rs
p3-miden-lifted/src/deep/: interpolate.rs  mod.rs  proof.rs  prover.rs  tests.rs  utils.rs  verifier.rs
p3-miden-lifted/src/fri/: fold.rs  mod.rs  proof.rs  prover.rs  tests.rs  verifier.rs
p3-miden-lifted/src/fri/fold/: arity2.rs  arity4.rs  arity8.rs  mod.rs
p3-miden-lifted/src/merkle_tree/: hiding_lmcs.rs  lifted_tree.rs  mod.rs  tests.rs
p3-miden-lifted/src/pcs/: config.rs  mod.rs  proof.rs  prover.rs  tests.rs  verifier.rs
p3-miden-lmcs/: Cargo.toml  LIFTING.md  README.md
p3-miden-lmcs/benches/: lmcs_vs_mmcs.rs  merkle_commit.rs  utils.rs
p3-miden-lmcs/src/: batch_proof.rs  hiding_lmcs.rs  lib.rs  lifted_tree.rs  lmcs.rs  mmcs.rs  opening.rs  proof.rs  tests.rs  utils.rs
p3-miden-lmcs/src/mmcs/: hiding.rs  mod.rs  tests.rs
p3-miden-matrix/: Cargo.toml
p3-miden-matrix/src/: bitrev.rs  dense.rs  extension.rs  horizontally_truncated.rs  lib.rs  row_index_mapped.rs  stack.rs  strided.rs  util.rs
p3-miden-prover/: Cargo.toml
p3-miden-prover/src/: air_wrapper_bus_boundary.rs  check_constraints.rs  config.rs  folder.rs  lib.rs  periodic_tables.rs  proof.rs  prover.rs  symbolic_builder.rs  symbolic_expression.rs  symbolic_variable.rs  util.rs  verifier.rs
p3-miden-prover/tests/: fibonacci_air.rs  periodic_air.rs  perm_air.rs
p3-miden-stateful-hasher/: Cargo.toml
p3-miden-stateful-hasher/src/: chaining.rs  field_sponge.rs  lib.rs  serializing_sponge.rs  testing.rs
p3-miden-symmetric/: Cargo.toml
p3-miden-symmetric/src/: compression.rs  lib.rs  serializing_hasher.rs  sponge.rs  stateful.rs  testing.rs
p3-miden-transcript/: Cargo.toml
p3-miden-transcript/src/: channel.rs  data.rs  init.rs  lib.rs  prover.rs  verifier.rs
p3-miden-uni-stark/: Cargo.toml
p3-miden-uni-stark/src/: check_constraints.rs  folder.rs  lib.rs  preprocessed.rs  proof.rs  prover.rs  sub_builder.rs  symbolic_builder.rs  symbolic_expression.rs  verifier.rs
p3-miden-uni-stark/tests/: fib_air.rs  mul_air.rs  mul_fib_pair.rs  rc_sub_builder.rs
