[workspace]
members = [
  "p3-miden-air",
  "p3-miden-dev-utils",
  "p3-miden-fri",
  "p3-miden-lifted-fri",
  "p3-miden-lifted-prover",
  "p3-miden-lifted-stark",
  "p3-miden-lifted-verifier",
  "p3-miden-lmcs",
  "p3-miden-prover",
  "p3-miden-stateful-hasher",
  "p3-miden-transcript",
  "p3-miden-uni-stark",
]
resolver = "3"

[workspace.package]
version = "0.4.2"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/0xMiden/p3-miden"
readme = "README.md"
homepage = "https://github.com/0xMiden/p3-miden"

[workspace.dependencies]

# Third-party dependencies
criterion = { version = "0.8", features = ["html_reports"] }
itertools = { version = "0.14.0", default-features = false, features = [
  "use_alloc",
] }
num-bigint = { version = "0.4", default-features = false }
paste = { version = "1.0", default-features = false }

# Upstream Plonky3 dependencies
p3-air = { default-features = false, version = "0.4.2" }
p3-baby-bear = { default-features = false, version = "0.4.2" }
p3-bn254 = { default-features = false, version = "0.4.2" }
p3-challenger = { default-features = false, version = "0.4.2" }
p3-circle = { default-features = false, version = "0.4.2" }
p3-commit = { default-features = false, version = "0.4.2" }
p3-dft = { default-features = false, version = "0.4.2" }
p3-field = { default-features = false, version = "0.4.2" }
p3-field-testing = { default-features = false, version = "0.4.2" }
p3-fri = { default-features = false, version = "0.4.2" }
p3-goldilocks = { default-features = false, version = "0.4.2" }
p3-interpolation = { default-features = false, version = "0.4.2" }
p3-keccak = { default-features = false, version = "0.4.2" }
p3-koala-bear = { default-features = false, version = "0.4.2" }
p3-matrix = { default-features = false, version = "0.4.2" }
p3-maybe-rayon = { default-features = false, version = "0.4.2" }
p3-mds = { default-features = false, version = "0.4.2" }
p3-merkle-tree = { default-features = false, version = "0.4.2" }
p3-mersenne-31 = { default-features = false, version = "0.4.2" }
p3-poseidon = { default-features = false, version = "0.4.2" }
p3-poseidon2 = { default-features = false, version = "0.4.2" }
p3-symmetric = { default-features = false, version = "0.4.2" }
p3-uni-stark = { default-features = false, version = "0.4.2" }
p3-util = { default-features = false, version = "0.4.2" }

# Internal p3-miden crates
p3-miden-air = { path = "p3-miden-air", version = "0.4.2" }
p3-miden-dev-utils = { path = "p3-miden-dev-utils", version = "0.4.2" }
p3-miden-fri = { path = "p3-miden-fri", version = "0.4.2" }
p3-miden-lifted-fri = { path = "p3-miden-lifted-fri", version = "0.4.2" }
p3-miden-lifted-prover = { path = "p3-miden-lifted-prover", version = "0.4.2" }
p3-miden-lifted-stark = { path = "p3-miden-lifted-stark", version = "0.4.2" }
p3-miden-lifted-verifier = { path = "p3-miden-lifted-verifier", version = "0.4.2" }
p3-miden-lmcs = { path = "p3-miden-lmcs", version = "0.4.2" }
p3-miden-prover = { path = "p3-miden-prover", version = "0.4.2" }
p3-miden-stateful-hasher = { path = "p3-miden-stateful-hasher", version = "0.4.2" }
p3-miden-transcript = { path = "p3-miden-transcript", version = "0.4.2" }
p3-miden-uni-stark = { path = "p3-miden-uni-stark", version = "0.4.2" }

rand = { version = "0.9", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1.37", default-features = false, features = [
  "attributes",
] }
transpose = { version = "0.2", default-features = false }
