[workspace]
members = [
  "p3-miden-air",
  "p3-miden-dev-utils",
  "p3-miden-fri",
  "p3-miden-lifted-air",
  "p3-miden-lifted-examples",
  "p3-miden-lifted-fri",
  "p3-miden-lifted-prover",
  "p3-miden-lifted-stark",
  "p3-miden-lifted-verifier",
  "p3-miden-lmcs",
  "p3-miden-prover",
  "p3-miden-stateful-hasher",
  "p3-miden-transcript",
  "p3-miden-uni-stark",
]
resolver = "3"

[workspace.package]
version = "0.4.2"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/0xMiden/p3-miden"
readme = "README.md"
homepage = "https://github.com/0xMiden/p3-miden"

[workspace.dependencies]

# Third-party dependencies
criterion = { version = "0.8", features = ["html_reports"] }
itertools = { version = "0.14.0", default-features = false, features = [
  "use_alloc",
] }
num-bigint = { version = "0.4", default-features = false }
paste = { version = "1.0", default-features = false }

# Upstream Plonky3 dependencies
p3-air = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-baby-bear = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-batch-stark = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-blake3 = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-bn254 = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-challenger = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-circle = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-commit = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-dft = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-field = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-field-testing = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-fri = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-goldilocks = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-interpolation = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-keccak = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-keccak-air = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-lookup = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-koala-bear = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-matrix = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-maybe-rayon = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-mds = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-merkle-tree = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-mersenne-31 = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-poseidon = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-poseidon2 = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-poseidon2-air = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-blake3-air = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-symmetric = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-uni-stark = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }
p3-util = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "832f992e" }

# Internal p3-miden crates
p3-miden-air = { path = "p3-miden-air", version = "0.4.2" }
p3-miden-dev-utils = { path = "p3-miden-dev-utils", version = "0.4.2" }
p3-miden-fri = { path = "p3-miden-fri", version = "0.4.2" }
p3-miden-lifted-air = { path = "p3-miden-lifted-air", version = "0.4.2" }
p3-miden-lifted-examples = { path = "p3-miden-lifted-examples", version = "0.4.2" }
p3-miden-lifted-fri = { path = "p3-miden-lifted-fri", version = "0.4.2" }
p3-miden-lifted-prover = { path = "p3-miden-lifted-prover", version = "0.4.2" }
p3-miden-lifted-stark = { path = "p3-miden-lifted-stark", version = "0.4.2" }
p3-miden-lifted-verifier = { path = "p3-miden-lifted-verifier", version = "0.4.2" }
p3-miden-lmcs = { path = "p3-miden-lmcs", version = "0.4.2" }
p3-miden-prover = { path = "p3-miden-prover", version = "0.4.2" }
p3-miden-stateful-hasher = { path = "p3-miden-stateful-hasher", version = "0.4.2" }
p3-miden-transcript = { path = "p3-miden-transcript", version = "0.4.2" }
p3-miden-uni-stark = { path = "p3-miden-uni-stark", version = "0.4.2" }

rand = { version = "0.10.0", default-features = false }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1.37", default-features = false, features = [
  "attributes",
] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
tracing-subscriber = { version = "0.3.17", features = [
  "std",
  "fmt",
  "env-filter",
] }
transpose = { version = "0.2", default-features = false }
