[workspace]
members = [
  "p3-miden-dev-utils",
  "p3-miden-lifted-air",
  "p3-miden-lifted-examples",
  "p3-miden-lifted-fri",
  "p3-miden-lifted-stark",
  "p3-miden-lmcs",
  "p3-miden-stateful-hasher",
  "p3-miden-transcript",
]
resolver = "3"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/0xMiden/p3-miden"
readme = "README.md"
homepage = "https://github.com/0xMiden/p3-miden"

[workspace.dependencies]

# Third-party dependencies
criterion = { version = "0.8", features = ["html_reports"] }
itertools = { version = "0.14.0", default-features = false, features = [
  "use_alloc",
] }
num-bigint = { version = "0.4", default-features = false }
paste = { version = "1.0", default-features = false }

# Upstream Plonky3 dependencies
p3-air = { version = "0.5.0", default-features = false }
p3-baby-bear = { version = "0.5.0", default-features = false }
p3-batch-stark = { version = "0.5.0", default-features = false }
p3-blake3 = { version = "0.5.0", default-features = false }
p3-bn254 = { version = "0.5.0", default-features = false }
p3-challenger = { version = "0.5.0", default-features = false }
p3-circle = { version = "0.5.0", default-features = false }
p3-commit = { version = "0.5.0", default-features = false }
p3-dft = { version = "0.5.0", default-features = false }
p3-field = { version = "0.5.0", default-features = false }
p3-field-testing = { version = "0.5.0", default-features = false }
p3-fri = { version = "0.5.0", default-features = false }
p3-goldilocks = { version = "0.5.0", default-features = false }
p3-interpolation = { version = "0.5.0", default-features = false }
p3-keccak = { version = "0.5.0", default-features = false }
p3-keccak-air = { version = "0.5.0", default-features = false }
p3-lookup = { version = "0.5.0", default-features = false }
p3-koala-bear = { version = "0.5.0", default-features = false }
p3-matrix = { version = "0.5.0", default-features = false }
p3-maybe-rayon = { version = "0.5.0", default-features = false }
p3-mds = { version = "0.5.0", default-features = false }
p3-merkle-tree = { version = "0.5.0", default-features = false }
p3-mersenne-31 = { version = "0.5.0", default-features = false }
p3-poseidon = { version = "0.5.0", default-features = false }
p3-poseidon2 = { version = "0.5.0", default-features = false }
p3-poseidon2-air = { version = "0.5.0", default-features = false }
p3-blake3-air = { version = "0.5.0", default-features = false }
p3-symmetric = { version = "0.5.0", default-features = false }
p3-uni-stark = { version = "0.5.0", default-features = false }
p3-util = { version = "0.5.0", default-features = false }

# Internal p3-miden crates
p3-miden-dev-utils = { path = "p3-miden-dev-utils", version = "0.5.0" }
p3-miden-lifted-air = { path = "p3-miden-lifted-air", version = "0.5.0" }
p3-miden-lifted-examples = { path = "p3-miden-lifted-examples", version = "0.5.0" }
p3-miden-lifted-fri = { path = "p3-miden-lifted-fri", version = "0.5.0" }
p3-miden-lifted-stark = { path = "p3-miden-lifted-stark", version = "0.5.0" }
p3-miden-lmcs = { path = "p3-miden-lmcs", version = "0.5.0" }
p3-miden-stateful-hasher = { path = "p3-miden-stateful-hasher", version = "0.5.0" }
p3-miden-transcript = { path = "p3-miden-transcript", version = "0.5.0" }

rand = { version = "0.10.0", default-features = false }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1.37", default-features = false, features = [
  "attributes",
] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
tracing-subscriber = { version = "0.3.17", features = [
  "std",
  "fmt",
  "env-filter",
] }
transpose = { version = "0.2", default-features = false }
