[package]
name = "p3-air-next"
description = "Minimal fork of p3-air from Plonky3 HEAD, pre-adapting for the upstream upgrade."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
p3-field.workspace = true
p3-matrix.workspace = true
tracing.workspace = true
