[package]
name = "p3-miden-field"
description = "Miden-specific field extensions, based on Plonky3's p3-field with additional FieldArray and PackedFieldExtension utilities."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
p3-maybe-rayon.workspace = true
p3-util.workspace = true

itertools.workspace = true
num-bigint.workspace = true
paste.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
p3-goldilocks.workspace = true
