[package]
name = "p3-miden-lifted-air"
description = "AIR traits for the Miden lifted STARK protocol, with symbolic constraint analysis."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
p3-air.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-util.workspace = true

serde = { workspace = true, features = ["derive", "alloc"] }
tracing.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
