[package]
name = "p3-miden-lifted-air"
description = "AIR traits for the Miden lifted STARK protocol, with symbolic constraint analysis."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
# Alias the fork as "p3-air" so no source code import path changes needed.
p3-air = { package = "p3-air-next", path = "../p3-air-next", default-features = false }
p3-field.workspace = true
p3-matrix.workspace = true
p3-util.workspace = true

thiserror.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
