[package]
name = "p3-miden-lifted-fri"
description = "Lifted FRI PCS (DEEP quotient + FRI)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
p3-challenger.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-miden-lmcs.workspace = true
p3-miden-transcript.workspace = true
p3-maybe-rayon.workspace = true
p3-util.workspace = true

rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
p3-dft.workspace = true
p3-fri.workspace = true
p3-goldilocks.workspace = true
p3-interpolation.workspace = true
p3-keccak.workspace = true
p3-merkle-tree.workspace = true
p3-miden-dev-utils.workspace = true
p3-miden-fri.workspace = true

criterion.workspace = true

[features]
parallel = ["p3-maybe-rayon/parallel"]

[[bench]]
name = "fri_fold"
harness = false

[[bench]]
name = "deep_quotient"
harness = false

[[bench]]
name = "pcs"
harness = false

[[bench]]
name = "fri_comparison"
harness = false
