[package]
name = "p3-miden-lifted-prover"
description = "Lifted STARK prover scaffolding (LMCS-based)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
p3-challenger.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-miden-air.workspace = true
p3-miden-lifted-fri.workspace = true
p3-miden-lifted-stark.workspace = true
p3-miden-lmcs.workspace = true
p3-miden-transcript.workspace = true
p3-util.workspace = true

rand.workspace = true
thiserror.workspace = true

[dev-dependencies]
p3-miden-dev-utils.workspace = true
