[package]
name = "p3-miden-lifted-stark"
description = "Shared scaffolding for the lifted STARK prover/verifier (LMCS-based)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
p3-challenger.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-miden-lifted-air.workspace = true
p3-miden-lifted-fri.workspace = true
p3-miden-lmcs.workspace = true
p3-miden-transcript.workspace = true
p3-util.workspace = true

rand.workspace = true
thiserror.workspace = true

[features]
default = []
parallel = ["p3-maybe-rayon/parallel"]

[dev-dependencies]
p3-baby-bear.workspace = true
