[package]
name = "p3-miden-lmcs"
description = "Lifted Matrix Commitment Scheme (LMCS) for matrices with power-of-two heights."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
p3-commit.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-miden-stateful-hasher.workspace = true
p3-maybe-rayon.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true

rand.workspace = true
serde = { workspace = true, features = ["alloc"] }
thiserror.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
p3-goldilocks.workspace = true
p3-keccak.workspace = true
p3-merkle-tree.workspace = true
p3-miden-dev-utils.workspace = true

criterion.workspace = true

[features]
parallel = ["p3-maybe-rayon/parallel"]

[[bench]]
name = "merkle_commit"
harness = false

[[bench]]
name = "lmcs_vs_mmcs"
harness = false
