[package]
name = "p3-miden-uni-stark"
description = "A minimal univariate STARK framework providing core components for proof generation and verification."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true

[features]
parallel = ["p3-uni-stark/parallel"]

[dependencies]
p3-air.workspace = true
p3-challenger.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-uni-stark.workspace = true
p3-util.workspace = true

itertools.workspace = true
tracing.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
p3-challenger.workspace = true
p3-circle.workspace = true
p3-commit = { workspace = true, features = ["test-utils"] }
p3-dft.workspace = true
p3-fri.workspace = true
p3-keccak.workspace = true
p3-matrix.workspace = true
p3-merkle-tree.workspace = true
p3-mersenne-31.workspace = true
p3-symmetric.workspace = true

postcard = { version = "1.0.0", default-features = false, features = ["alloc"] }
rand.workspace = true
